# Plume

./: .gitignore  bot.py  config.py  main.py  pyproject.toml
cogs/commands/system/: ping.py  rules.py
cogs/events/: on_message_edit.py  on_ready.py
cogs/modules/presence/: forbidden_words.tpy  reports.deadpy
cogs/modules/reports/: reports.py
cogs/modules/rules/: main.py
cogs/modules/talk/: banned_words.py  power_roles.py
cogs/tasks/: auto_reload.py
prisma/migrations/20250219111405_init/: migration.sql
prisma/schema/: schema.prisma
prisma/schema/orders/: orders.prisma
prisma/schema/reports/: reports.prisma
prisma/schema/rules/: rules.prisma  rules.status.prisma
prisma/schema/talk/: banned.words.prisma  mistakes.prisma
prisma/schema/users/: users.prisma
src/: bot.py  main.py
src/configuration/: configuration.py
src/core/commands/: ping.py
src/core/events/: on_ready.py
src/core/tasks/: auto_reload.py
src/modules/joe/: on_edit.py
src/modules/talk/: banned_words.py  muzzled.py
src/utilities/: cogs.py  discord.py  logger.py  utils.py
src/utilities/discord/: embed.py
src/utilities/reports/: reports.py
utils/: __init__.py  logger.py  shared_functions.py
views/: page_buttons.py
