[project]
name = "plume"
version = "0.1.0"
description = ""
authors = [{ name = "Sereti" }]
requires-python = "3.12.3"
dependencies = [
    "asyncio (>=3.4.3,<4.0.0)",
    "nextcord (>=3.0.1,<4.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "prisma (>=0.15.0,<0.16.0)",
    "pyright (>=1.1.394,<2.0.0)",
]

[tool.poetry]
package-mode = false

[tool.pyright]
include = ["main.py"]

typeCheckingMode = "strict"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
